--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -56,7 +56,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>13</td><td>application_1602776478999_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1602776478999_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1602776478999_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>9</td><td>application_1604892119374_0011</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1604892119374_0011/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604892119374_0011_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +194,7 @@
     "                                       version=1,\n",
     "                                       primary_key=['store'],\n",
     "                                       description=\"Store related features\",\n",
+    "                                       time_travel_format=None,\n",
     "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})"
    ]
   },
@@ -206,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4ad8b90>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7feba97af290>"
      ]
     }
    ],
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,19 +284,20 @@
     "                                        version=1,\n",
     "                                        primary_key=['store', 'dept', 'date'],\n",
     "                                        description=\"Sales related features\",\n",
+    "                                        time_travel_format=None,                                        \n",
     "                                        statistics_config=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b0cbd0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7feb916b2290>"
      ]
     }
    ],
@@ -311,28 +313,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4d40850>"
-     ]
-    }
-   ],
-   "source": [
-    "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=2,\n",
-    "                                        partition_key=['store'],\n",
-    "                                        description=\"Sales related features\",\n",
-    "                                        statistics_config=False)\n",
-    "sales_part_fg_meta.save(sales_fg)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -345,23 +325,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b68150>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7feba97a6ed0>"
      ]
     }
    ],
    "source": [
     "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=3,\n",
+    "                                        version=2,\n",
     "                                        primary_key=['store', 'dept', 'date'],\n",
     "                                        online_enabled=True,\n",
     "                                        description=\"Sales related features\",\n",
+    "                                        time_travel_format=None,                                             \n",
     "                                        statistics_config=False)\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
@@ -378,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4d40690>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7feba97a6510>"
      ]
     }
    ],
@@ -396,6 +377,7 @@
     "                                            version=1,\n",
     "                                            primary_key=['store', 'date'],\n",
     "                                            description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "                                            time_travel_format=None,                                            \n",
     "                                            statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
@@ -411,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,14 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b09ed0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f2a9217ed50>"
      ]
     }
    ],
@@ -488,12 +470,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg', 1)\n",
-    "sales_fg.add_tag('prod')\n",
+    "sales_fg.add_tag('prod')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sales_fg.add_tag('country', value=\"US\")"
    ]
   },
@@ -506,17 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'country': 'US'}, {'prod': ''}]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg', 1)\n",
     "print(sales_fg.get_tag())"
@@ -533,14 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b6a410>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7feba988d390>"
      ]
     }
    ],
@@ -549,26 +531,20 @@
     "                                        version=2,\n",
     "                                        primary_key=['store', 'date'],\n",
     "                                        description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "                                        time_travel_format=None,                                                                                        \n",
     "                                        statistics_config=False)\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg_meta = fs.get_feature_group('exogenous_fg', 2)\n",
     "exogenous_fg_meta.delete()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
