--- a/notebooks/featurestore/hsfs/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/training_datasets.ipynb
@@ -31,7 +31,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>20</td><td>application_1602855941528_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1602855941528_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e04_1602855941528_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>10</td><td>application_1604892119374_0012</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1604892119374_0012/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604892119374_0012_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f9fe2d0e990>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5b80738d0>"
      ]
     }
    ],
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f9fe2897110>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d03db550>"
      ]
     }
    ],
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f9fe2897310>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d03db050>"
      ]
     }
    ],
@@ -229,9 +229,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT `fg0`.`sales_last_year_store_dep`, `fg0`.`sales_last_month_store`, `fg0`.`sales_last_six_month_store`, `fg0`.`sales_last_six_month_store_dep`, `fg0`.`sales_last_month_store_dep`, `fg0`.`sales_last_year_store`, `fg0`.`is_holiday`, `fg0`.`dept`, `fg0`.`sales_last_quarter_store`, `fg0`.`date`, `fg0`.`sales_last_quarter_store_dep`, `fg0`.`weekly_sales`, `fg0`.`store`, `fg1`.`fuel_price`, `fg1`.`unemployment`, `fg1`.`cpi`\n",
+      "SELECT `fg0`.`sales_last_year_store`, `fg0`.`sales_last_month_store_dep`, `fg0`.`sales_last_year_store_dep`, `fg0`.`sales_last_quarter_store`, `fg0`.`weekly_sales`, `fg0`.`store`, `fg0`.`is_holiday`, `fg0`.`sales_last_six_month_store`, `fg0`.`sales_last_month_store`, `fg0`.`sales_last_six_month_store_dep`, `fg0`.`dept`, `fg0`.`date`, `fg0`.`sales_last_quarter_store_dep`, `fg1`.`fuel_price`, `fg1`.`unemployment`, `fg1`.`cpi`\n",
       "FROM `demo_fs_meb10000`.`sales_fg_1` `fg0`\n",
-      "INNER JOIN `demo_fs_meb10000`.`exogenous_fg_1` `fg1` ON `fg0`.`store` = `fg1`.`store` AND `fg0`.`date` = `fg1`.`date`\n",
+      "INNER JOIN `demo_fs_meb10000`.`exogenous_fg_1` `fg1` ON `fg0`.`date` = `fg1`.`date` AND `fg0`.`store` = `fg1`.`store`\n",
       "VersionWarning: No version provided for getting training dataset `sales_model`, defaulting to `1`."
      ]
     }
@@ -255,26 +255,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "df = query.read()\n",
+    "# Apply additional transformations\n",
+    "df = (df.withColumn(\"is_holiday\", F.when(F.col(\"is_holiday\") == \"true\", 1 ).otherwise(0))\n",
+    "       .withColumn(\"unemployment\", F.col(\"unemployment\").cast(\"double\")) \n",
+    "       .withColumn(\"cpi\", F.col(\"cpi\").cast(\"double\"))\n",
+    "       .drop(\"date\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### save as `csv` format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f9fe28b2590>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d0271490>"
      ]
     }
    ],
    "source": [
-    "df = query.read()\n",
-    "# Apply additional transformations\n",
-    "df = df.drop(\"is_holiday\")\n",
-    "\n",
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
     "                               data_format=\"csv\",\n",
+    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},                                \n",
     "                               version=5)\n",
+    "\n",
+    "td.save(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### save as `tfrecord` format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d01722d0>"
+     ]
+    }
+   ],
+   "source": [
+    "td = fs.create_training_dataset(name=\"sales_model\",\n",
+    "                               description=\"Dataset to train the sales model\",\n",
+    "                               data_format=\"tfrecord\",\n",
+    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},                                \n",
+    "                               version=6)\n",
     "\n",
     "td.save(df)"
    ]
@@ -334,28 +383,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------------+----------------------+--------------------------+------------------------------+--------------------------+---------------------+----------+----+------------------------+-------------------+----------------------------+------------+-----+----------+------------+-----------+\n",
-      "|sales_last_year_store_dep|sales_last_month_store|sales_last_six_month_store|sales_last_six_month_store_dep|sales_last_month_store_dep|sales_last_year_store|is_holiday|dept|sales_last_quarter_store|               date|sales_last_quarter_store_dep|weekly_sales|store|fuel_price|unemployment|        cpi|\n",
-      "+-------------------------+----------------------+--------------------------+------------------------------+--------------------------+---------------------+----------+----+------------------------+-------------------+----------------------------+------------+-----+----------+------------+-----------+\n",
-      "|                      0.0|                   0.0|                       0.0|                           0.0|                       0.0|                  0.0|     false|  94|                     0.0|2010-02-05 00:00:00|                         0.0|    63787.83|   20|     2.784|       8.187|204.2471935|\n",
-      "|                      0.0|                   0.0|                       0.0|                           0.0|                       0.0|                  0.0|     false|  22|                     0.0|2010-02-05 00:00:00|                         0.0|    17597.83|   20|     2.784|       8.187|204.2471935|\n",
-      "|                      0.0|                   0.0|                       0.0|                           0.0|                       0.0|                  0.0|     false|  54|                     0.0|2010-02-05 00:00:00|                         0.0|       551.0|   20|     2.784|       8.187|204.2471935|\n",
-      "|                      0.0|                   0.0|                       0.0|                           0.0|                       0.0|                  0.0|     false|  12|                     0.0|2010-02-05 00:00:00|                         0.0|     6527.56|   20|     2.784|       8.187|204.2471935|\n",
-      "|                      0.0|                   0.0|                       0.0|                           0.0|                       0.0|                  0.0|     false|  41|                     0.0|2010-02-05 00:00:00|                         0.0|     1193.96|   20|     2.784|       8.187|204.2471935|\n",
-      "+-------------------------+----------------------+--------------------------+------------------------------+--------------------------+---------------------+----------+----+------------------------+-------------------+----------------------------+------------+-----+----------+------------+-----------+\n",
+      "+---------------------+--------------------------+-------------------------+------------------------+------------+-----+----------+--------------------------+----------------------+------------------------------+----+-------------------+----------------------------+----------+------------+-----------+\n",
+      "|sales_last_year_store|sales_last_month_store_dep|sales_last_year_store_dep|sales_last_quarter_store|weekly_sales|store|is_holiday|sales_last_six_month_store|sales_last_month_store|sales_last_six_month_store_dep|dept|               date|sales_last_quarter_store_dep|fuel_price|unemployment|        cpi|\n",
+      "+---------------------+--------------------------+-------------------------+------------------------+------------+-----+----------+--------------------------+----------------------+------------------------------+----+-------------------+----------------------------+----------+------------+-----------+\n",
+      "|                  0.0|                       0.0|                      0.0|                     0.0|    32362.95|   20|     false|                       0.0|                   0.0|                           0.0|  55|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
+      "|                  0.0|                       0.0|                      0.0|                     0.0|    63787.83|   20|     false|                       0.0|                   0.0|                           0.0|  94|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
+      "|                  0.0|                       0.0|                      0.0|                     0.0|    17597.83|   20|     false|                       0.0|                   0.0|                           0.0|  22|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
+      "|                  0.0|                       0.0|                      0.0|                     0.0|     9488.37|   20|     false|                       0.0|                   0.0|                           0.0|  30|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
+      "|                  0.0|                       0.0|                      0.0|                     0.0|    85812.69|   20|     false|                       0.0|                   0.0|                           0.0|   2|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
+      "+---------------------+--------------------------+-------------------------+------------------------+------------+-----+----------+--------------------------+----------------------+------------------------------+----+-------------------+----------------------------+----------+------------+-----------+\n",
       "only showing top 5 rows"
      ]
     }
    ],
    "source": [
-    "td = fs.get_training_dataset(\"sales_model\", 1)\n",
+    "td = fs.get_training_dataset(\"sales_model\", 2)\n",
     "td.show(5)"
    ]
   },
@@ -368,19 +417,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "294905"
+      "295376"
      ]
     }
    ],
    "source": [
-    "td = fs.get_training_dataset(\"sales_model\", 3)\n",
+    "td = fs.get_training_dataset(\"sales_model\", 6)\n",
     "td.read(\"train\").count()"
    ]
   },
@@ -388,21 +437,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feed the training dataset to a model training\n",
-    "\n",
-    "If you are training a model, HSFS allows you to get a `tf.data.TFRecordDataset` handle to read the trainign dataset and feed it to a model training loop efficiently."
+    "### Input the training dataset to a model training loop\n",
+    "If you are training a model, HSFS provides `tf_data` method that returns `TFDataEngine` object with utility methods to read training dataset as `tf.data.Dataset` object to read the training dataset and feed it to a model training loop efficiently. \n",
+    "* Currently `TFDataEngine` provides 2 utility methods `tf_record_dataset` and `tf_csv_dataset` for reading `.tfrecord` and `.csv` files, respectivelly.\n",
+    "* Both methods support only following feature types `string`, `short`, `int`, `long`, `float` and `double`.\n",
+    "* In both methods you can set `process` argument to `True` and they will return `PrefetchDataset` ready to input to model training loop.\n",
+    "* If you would like to apply your own logic to feature transformation using `tf.data.Dataset` then set `process` argument to `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### proccess using `tf_record_dataset`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "td = fs.get_training_dataset(\"sales_model\", 3)\n",
+    "train_input = td.tf_data(target_name='weekly_sales', split='train', is_training=True)\n",
+    "train_input_processed = train_input.tf_record_dataset(process=True, batch_size =32, num_epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PrefetchDataset shapes: ((32, 14), (32,)), types: (tf.float32, tf.float32)>"
+     ]
+    }
+   ],
+   "source": [
+    "train_input_processed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply custom logic to `tf_record_dataset`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td = fs.get_training_dataset(\"sales_model\", 6)\n",
     "\n",
-    "train_input_feeder = td.tf_data(target_name='weekly_sales',split='train', is_training=True)\n",
-    "train_input = train_input_feeder.tf_csv_dataset()"
+    "train_input = td.tf_data(target_name=None, split='train', is_training=True)\n",
+    "train_input_not_processed = train_input.tf_record_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ParallelMapDataset shapes: {cpi: (), dept: (), fuel_price: (), is_holiday: (), sales_last_month_store: (), sales_last_month_store_dep: (), sales_last_quarter_store: (), sales_last_quarter_store_dep: (), sales_last_six_month_store: (), sales_last_six_month_store_dep: (), sales_last_year_store: (), sales_last_year_store_dep: (), store: (), unemployment: (), weekly_sales: ()}, types: {cpi: tf.float32, dept: tf.int64, fuel_price: tf.float32, is_holiday: tf.int64, sales_last_month_store: tf.float32, sales_last_month_store_dep: tf.float32, sales_last_quarter_store: tf.float32, sales_last_quarter_store_dep: tf.float32, sales_last_six_month_store: tf.float32, sales_last_six_month_store_dep: tf.float32, sales_last_year_store: tf.float32, sales_last_year_store_dep: tf.float32, store: tf.int64, unemployment: tf.float32, weekly_sales: tf.float32}>"
+     ]
+    }
+   ],
+   "source": [
+    "train_input_not_processed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "batch_size = 32\n",
+    "num_epochs = 1 \n",
+    "\n",
+    "def flat_map_impl(example):\n",
+    "    feature_names = [td_feature.name for td_feature in td.schema] \n",
+    "    label_name = feature_names.pop(feature_names.index('weekly_sales'))\n",
+    "    x = [tf.cast(example[feature_name], tf.float32) for feature_name in feature_names]\n",
+    "    y = example[label_name]\n",
+    "    return x,y\n",
+    "\n",
+    "train_input_custum_processed = train_input_not_processed.map(lambda value: flat_map_impl(value))\\\n",
+    "    .shuffle(num_epochs * batch_size)\\\n",
+    "    .repeat(num_epochs * batch_size)\\\n",
+    "    .cache()\\\n",
+    "    .batch(batch_size, drop_remainder=True)\\\n",
+    "    .prefetch(tf.data.experimental.AUTOTUNE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PrefetchDataset shapes: ((32, 14), (32,)), types: (tf.float32, tf.float32)>"
+     ]
+    }
+   ],
+   "source": [
+    "train_input_custum_processed"
    ]
   },
   {
@@ -415,21 +568,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
