--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -469,6 +469,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tagging feature group\n",
+    "The feature store enables users to attach tags to feature droup in order to make them discoverable across feature\n",
+    "stores.  A tag is a simple {key: value} association, providing additional information about the data, such as for\n",
+    "example geographic origin. This is useful in an organization as it makes easier to discover for data scientists, reduces\n",
+    "duplicated work in terms of for example data preparation. The tagging feature is only available in the enterprise version."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define tags that can be attached\n",
+    "The first step is to define a set of tags that can be attached. Such as for example “Country” to tag data as being from\n",
+    "a certain geographic location and “Sport” to further associate a type of Sport with the data.\n",
+    "\n",
+    "![Define tags that can be attached](images/creating_tags.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attach tags using the UI\n",
+    "Tags can then be attached using the feature store UI or programmatically using the API.\n",
+    "Attaching tags to feature group.\n",
+    "\n",
+    "![Attach tags using the UI](images/attach_tags.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attach tags using HSFS API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -491,6 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Retrieval\n",
     "From the API you can also list which tags are assigned to a feature group"
    ]
   },
