--- a/notebooks/featurestore/hsfs/time_travel_python.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel_python.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Time travel operations in Hopsworks Feature Store\n",
     "\n",
-    "In this notebook we will introduce time travel operations in Hopsworks Feature Store (HSFS). Currently HSFS supports the Apache Hudi(http://hudi.apache.org/) a storage abstraction/library for doing **incremental** data ingestion to data lakes stored on Hops (a Hopsworks Feature Store).\n",
+    "In this notebook we will introduce time travel operations in Hopsworks Feature Store (HSFS). Currently HSFS supports Apache Hudi (http://hudi.apache.org/) a storage abstraction/library for doing **incremental** data ingestion to a Hopsworks Feature Store.\n",
     "\n",
     "TLDR; Hudi is a storage abstraction/library build on top of Spark. A Hudi dataset stores data in Parquet files and maintains additional metadata to make upserts efficient. A Hudi ingest job is intended to be run as a streaming ingest job, on an interval such as every 15 minutes, reading deltas from a message-bus like Kafka and ingesting the deltas **incrementally** into a data lake.\n",
     "\n",
@@ -346,7 +346,7 @@
    "source": [
     "### Create feature groups \n",
     "\n",
-    "Now We will create each feature group and enable time travel format `TimeTravelFormat.HUDI`. In Hopsworks Feature Store `primary` and `partition` keys are required to be privided for HUDI enabled feature groups."
+    "Now We will create each feature group and enable time travel format `HUDI`. In Hopsworks Feature Store `primary` and `partition` keys are required to be privided for HUDI enabled feature groups."
    ]
   },
   {
@@ -402,7 +402,7 @@
    "metadata": {},
    "source": [
     "### Bulk insert data into the feature group\n",
-    "Since we have not yet saved any data into newly created feature groups we will use Apache hudi terminology and `Bulk Insert` data. In HSFS its just issuing `save` function.  "
+    "Since we have not yet saved any data into newly created feature groups we will use Apache hudi terminology and `Bulk Insert` data. In HSFS its just issuing `save` method.  "
    ]
   },
   {
@@ -686,7 +686,7 @@
    "metadata": {},
    "source": [
     "#### Make the Upsert using Hopsworks Feature Store API\n",
-    "In Hopsworks Feature Store issuing `insert` function on Apache Hudi enabled feature group will by default perform `UPSERT` operation which means to either insert a new row, or on the basis of `parimary` and `partition` keys update already existing one."
+    "In Hopsworks Feature Store issuing `insert` method on Apache Hudi enabled feature group will by default perform `UPSERT` operation which means to either insert a new row, or on the basis of `parimary` and `partition` keys or update already existing one."
    ]
   },
   {
@@ -877,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lets make one more commit to better demostrate time travle capabilities of Hopsworks Feature Store"
+    "### Lets make one more commit to better demostrate time travel capabilities of Hopsworks Feature Store"
    ]
   },
   {
@@ -1004,8 +1004,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Time Travel Querues\n",
-    "When `read` function is issued, whithout any aparameters, on  `FeatureGroup` object most recent view of the Feature group will be returned "
+    "### Time Travel Queries\n",
+    "When `read` method is issued on `FeatureGroup` object, whithout any aparameters, most recent view of the Feature group will be returned. "
    ]
   },
   {
@@ -1153,7 +1153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hopsworks Feature Store also has a feature for incremental reads:"
+    "### Hopsworks Feature Store also provides a method for incremental reads:"
    ]
   },
   {
@@ -1211,7 +1211,7 @@
    "metadata": {},
    "source": [
     "### Join featuregroups that correspond to specific point in time\n",
-    "If we are interetsted to join Feature groups all of them correspong one specific point in time then we can issue `asOf` function on join `Query` object  "
+    "If we are interetsted to join Feature groups all of them correspong to one specific point in time then we can issue `as_of` method on join `Query` object.  "
    ]
   },
   {
@@ -1261,7 +1261,7 @@
    "metadata": {},
    "source": [
     "### Join featuregroups that correspond to different points in time\n",
-    "Hopswork Feature store also provides functionality to join Feature groups that correspond to different points in time "
+    "Hopswork Feature store also provides functionality to join Feature groups that correspond to different points in time. "
    ]
   },
   {
