reformat scala code

--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -313,6 +313,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
+    "                                        version=2,\n",
+    "                                        partition_key=['store'],\n",
+    "                                        description=\"Sales related features\",\n",
+    "                                        statistics_config=False)\n",
+    "sales_part_fg_meta.save(sales_fg)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -338,7 +352,7 @@
    ],
    "source": [
     "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=2,\n",
+    "                                        version=3,\n",
     "                                        primary_key=['store', 'dept', 'date'],\n",
     "                                        online_enabled=True,\n",
     "                                        description=\"Sales related features\",\n",
