--- a/notebooks/featurestore/hsfs/time_travel_scala.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel_scala.ipynb
@@ -428,14 +428,14 @@
     }
    ],
    "source": [
-    "val economyFg = fs.createFeatureGroup().\n",
-    "name(\"economy_fg\").\n",
-    "description(\"Hudi Household Economy Feature Group\").\n",
-    "version(1).\n",
-    "primaryKeys(Seq(\"id\")).\n",
-    "partitionKeys(Seq(\"year\")).\n",
-    "timeTravelFormat(TimeTravelFormat.HUDI).\n",
-    "build();"
+    "val economyFg = (fs.createFeatureGroup().\n",
+    "                name(\"economy_fg\").\n",
+    "                description(\"Hudi Household Economy Feature Group\").\n",
+    "                version(1).\n",
+    "                primaryKeys(Seq(\"id\")).\n",
+    "                partitionKeys(Seq(\"year\")).\n",
+    "                timeTravelFormat(TimeTravelFormat.HUDI).\n",
+    "                build())"
    ]
   },
   {
@@ -452,14 +452,14 @@
     }
    ],
    "source": [
-    "val demographyFg = fs.createFeatureGroup().\n",
-    "name(\"demography_fg\").\n",
-    "description(\"Hudi Demographic Feature Group\").\n",
-    "version(1).\n",
-    "primaryKeys(Seq(\"id\")).\n",
-    "partitionKeys(Seq(\"zipcode\")).\n",
-    "timeTravelFormat(TimeTravelFormat.HUDI).\n",
-    "build();"
+    "val demographyFg = (fs.createFeatureGroup().\n",
+    "                    name(\"demography_fg\").\n",
+    "                    description(\"Hudi Demographic Feature Group\").\n",
+    "                    version(1).\n",
+    "                    primaryKeys(Seq(\"id\")).\n",
+    "                    partitionKeys(Seq(\"zipcode\")).\n",
+    "                    timeTravelFormat(TimeTravelFormat.HUDI).\n",
+    "                    build())"
    ]
   },
   {
@@ -476,14 +476,14 @@
     }
    ],
    "source": [
-    "val classFg = fs.createFeatureGroup().\n",
-    "name(\"class_fg\").\n",
-    "description(\"Hudi Class Feature Group\").\n",
-    "version(1).\n",
-    "primaryKeys(Seq(\"id\")).\n",
-    "partitionKeys(Seq(\"year\")).\n",
-    "timeTravelFormat(TimeTravelFormat.HUDI).\n",
-    "build();"
+    "val classFg = (fs.createFeatureGroup().\n",
+    "                name(\"class_fg\").\n",
+    "                description(\"Hudi Class Feature Group\").\n",
+    "                version(1).\n",
+    "                primaryKeys(Seq(\"id\")).\n",
+    "                partitionKeys(Seq(\"year\")).\n",
+    "                timeTravelFormat(TimeTravelFormat.HUDI).\n",
+    "                build())"
    ]
   },
   {
